syntax = "proto3";

message message_name {
  string fieldName = 1;
}
